package com.ameerdev.models;

public class Page {
}
