package com.ameerdev.repositories;

public interface ReleaseRepository {
}
