package com.ameerdev.service;

import jakarta.enterprise.context.ApplicationScoped;

@ApplicationScoped
public class SeriesService {
}
